# voxhook

./: .gitignore  CLAUDE.md  LICENSE  README.md  get.sh  install.sh  pyproject.toml  uninstall.sh
examples/: settings-example.json
hooks/common/: __init__.py  awareness.py  enums.py  utils.py
hooks/notify/: handler.py  notification_mapping.json  test.py
hooks/tts/: audio_queue.py  cache_manager.py  config.json  generate.py  generate_piper.py  gladosify.py  handler.py  message_templates.py
templates/: abathur.json  default.json  glados.json  reptilian-brain.json
voxhook/: __init__.py  cli.py  installer.py
